--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "run-01": "ts-node src/task_01.ts"
   },
   "author": "Le Ma",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "description": "",
   "devDependencies": {
     "@types/node": "^14.14.41"
