--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev-01": "nodemon src/task_01.ts",
     "run-01": "ts-node src/task_01.ts",
     "dev-02": "nodemon src/task_02.ts",
-    "run-02": "ts-node src/task_02.ts"
+    "run-02": "ts-node src/task_02.ts",
+    "dev-03": "nodemon src/task_03.ts",
+    "run-03": "ts-node src/task_03.ts"
   },
   "author": "Le Ma",
   "license": "Apache-2.0",
